asm_grammar.txt
lang -> expr*
expr -> (NLINE | common | arifetic | logical | jump | label)

common -> (pop | push) NLINE
arifetic -> arif_op NLINE
logical -> (log_op | comp_op | shift_op) NLINE
jump -> jmp_op (addr | LABEL) NLINE
label -> LABEL COLON NLINE

pop -> 'POP' (addr | reg)
push -> 'PUSH' (addr | literal | reg)

arif_op -> 'ADD' | 'SUB'
log_op -> 'AND' | 'OR' | 'XOR' | 'NOR' | 'NOT'
comp_op -> 'CMP'
shift_op -> 'SHL' | 'SHR'

jmp_op -> 'JC' | 'JZ' | 'JMP'

reg -> "R[1-7]*"
literal -> "#[0-9A-F]+"
addr -> "@[0-9A-F]+"
NLINE -> "[\n]+"
LABEL -> "[A-Za-z_][A-Za-z0-9_]*"
COLON -> ":"
